Configure DB and compile engine assets with jsbundling

--- a/app/views/layouts/documentation/application.html.erb
+++ b/app/views/layouts/documentation/application.html.erb
@@ -6,6 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "documentation/application", media: "all" %>
+    <%= javascript_include_tag "documentation/application", "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
 
