Setup stimulus and tiptap

--- a/app/views/documentation/pages/_form.html.erb
+++ b/app/views/documentation/pages/_form.html.erb
@@ -21,6 +21,8 @@
     <%= form.text_field :description %>
   </div>
 
+  <div data-controller="rich-text-editor"></div>
+
   <div>
     <%= form.submit %>
   </div>
