Style with Bulma and frontend helpers

--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -13,4 +13,75 @@
  *= require_self
  */
 
+@import 'variables';
+
+@import 'sass/utilities/initial-variables';
+@import 'sass/utilities/functions';
+@import 'sass/utilities/derived-variables';
+@import 'sass/utilities/mixins';
+@import 'sass/utilities/controls';
+@import 'sass/utilities/extends';
+
+@import 'sass/base/minireset';
+@import 'sass/base/generic';
+@import 'sass/base/animations';
+
+// @import 'sass/elements/box';
+@import 'sass/elements/button';
+@import 'sass/elements/container';
+// @import 'sass/elements/content';
+@import 'sass/elements/icon';
+// @import 'sass/elements/image';
+@import 'sass/elements/notification';
+// @import 'sass/elements/progress';
+@import 'sass/elements/table';
+// @import 'sass/elements/tag';
+@import 'sass/elements/title';
+@import 'sass/elements/other';
+
+@import 'sass/form/shared';
+@import 'sass/form/input-textarea';
+@import 'sass/form/checkbox-radio';
+@import 'sass/form/select';
+@import 'sass/form/file';
+@import 'sass/form/tools';
+
+@import 'sass/components/breadcrumb';
+// @import 'sass/components/card';
+// @import 'sass/components/dropdown';
+@import 'sass/components/level';
+// @import 'sass/components/media';
+// @import 'sass/components/menu';
+// @import 'sass/components/message';
+@import 'sass/components/modal';
+// @import 'sass/components/navbar';
+// @import 'sass/components/pagination';
+// @import 'sass/components/panel';
+// @import 'sass/components/tabs';
+
+@import 'sass/grid/columns';
+// @import 'sass/grid/tiles';
+
+@import 'sass/helpers/color';
+// @import 'sass/helpers/flexbox';
+// @import 'sass/helpers/float';
+// @import 'sass/helpers/other';
+// @import 'sass/helpers/overflow';
+// @import 'sass/helpers/position';
+@import 'sass/helpers/spacing';
+@import 'sass/helpers/typography';
+// @import 'sass/helpers/visibility';
+
+// @import 'sass/layout/hero';
+@import 'sass/layout/section';
+// @import 'sass/layout/footer';
+
+// Frontend Helpers styles
+//
+@import 'fe_disappear_animations';
+@import 'fe_icons';
+@import 'fe_notification';
+
+// Engine styles
+//
 @import 'rich_text_editor';
