--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -1,29 +1,56 @@
+$menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
+
+.rich-editor-content {
+  p {
+    min-height: 1.5rem;
+  }
+}
+
 .rich-text-editor-component {
+  &.input {
+    height: unset;
+    min-height: 5rem;
+  }
+
   .is-active {
-    color: blue;
+    color: $primary;
   }
 
   .ProseMirror {
     outline: none;
+    min-height: 6rem;
+
+    p.is-editor-empty:first-child:before {
+      content: attr(data-placeholder);
+      float: left;
+      color: #adb5bd;
+      pointer-events: none;
+      height: 0;
+    }
   }
 }
 
 .rich-text-editor-menu {
   display: flex;
-  box-shadow: 0px 3px 9px rgba(10, 10, 10, 0.3),
-    0 0 0 1px rgba(10, 10, 10, 0.03);
+  box-shadow: $menu-box-shadow;
   border-radius: 0.25rem;
   overflow: hidden;
   text-align: center;
 
   a {
     display: inline-block;
+    color: $black-ter;
     background-color: white;
+    border-right: 1px solid $grey-lightest;
     padding: 0.25rem;
-    width: 1rem;
+    width: 2rem;
+
+    &:last-child {
+      border-right: none;
+    }
 
     &:hover {
-      background-color: #ededed;
+      background-color: $grey-lightest;
     }
 
     &.bold {
