--- a/app/views/documentation/pages/_page.html.erb
+++ b/app/views/documentation/pages/_page.html.erb
@@ -1,12 +1,8 @@
 <div id="<%= dom_id page %>">
-  <p>
-    <strong>Title:</strong>
-    <%= page.title %>
-  </p>
+  <h1 class="title is-1"><%= page.title %></h1>
+  <p class="subtitle"><%= page.description %></p>
 
-  <p>
-    <strong>Description:</strong>
-    <%= page.description %>
-  </p>
-
+  <div class="rich-editor-content">
+    <%= page.content.html_safe %>
+  </div>
 </div>
