Add Heading elements to editor menu

--- a/app/assets/stylesheets/documentation/variables.scss
+++ b/app/assets/stylesheets/documentation/variables.scss
@@ -1,3 +1,13 @@
+// Sizes
+$size-1: 3rem;
+$size-2: 2.5rem;
+$size-3: 2rem;
+$size-4: 1.5rem;
+$size-5: 1.25rem;
+$size-6: 1rem;
+$size-7: 0.875rem;
+$size-8: 0.75rem;
+
 // Colors
 $black: hsl(0, 0%, 4%);
 $black-bis: hsl(0, 0%, 7%);
