--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -4,6 +4,18 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
   p {
     min-height: 1.5rem;
   }
+
+  h1 {
+    font-size: $size-3;
+  }
+
+  h2 {
+    font-size: $size-4;
+  }
+
+  h3 {
+    font-size: $size-5;
+  }
 }
 
 .rich-text-editor-component {
