--- a/app/assets/stylesheets/documentation/variables.scss
+++ b/app/assets/stylesheets/documentation/variables.scss
@@ -24,6 +24,8 @@ $white-ter: hsl(0, 0%, 96%);
 $white-bis: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
+$error: hsl(10, 60%, 59%);
+
 $box-shadow: 0px 3px 18px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.03);
 
 $z-index-notification: 10;
