Add bulleted list to editor menu

--- a/app/views/documentation/pages/_form.html.erb
+++ b/app/views/documentation/pages/_form.html.erb
@@ -32,10 +32,11 @@
         </div>
         <div class="dropdown-menu">
           <div class="dropdown-content">
-            <a class="h1 dropdown-item" data-action="rich-text-editor#setParagraph" data-rich-text-editor-target="text">Text</a>
+            <a class="text dropdown-item" data-action="rich-text-editor#setParagraph" data-rich-text-editor-target="text">Text</a>
             <a class="h1 dropdown-item" data-action="rich-text-editor#toggleH1" data-rich-text-editor-target="h1">Heading 1</a>
             <a class="h2 dropdown-item" data-action="rich-text-editor#toggleH2" data-rich-text-editor-target="h2">Heading 2</a>
             <a class="h3 dropdown-item" data-action="rich-text-editor#toggleH3" data-rich-text-editor-target="h3">Heading 3</a>
+            <a class="ul dropdown-item" data-action="rich-text-editor#toggleBulletList" data-rich-text-editor-target="ul">Bulleted list</a>
           </div>
         </div>
       </div>
