--- a/app/views/documentation/pages/_form.html.erb
+++ b/app/views/documentation/pages/_form.html.erb
@@ -38,6 +38,7 @@
             <a class="h3 dropdown-item" data-action="rich-text-editor#toggleH3" data-rich-text-editor-target="h3">Heading 3</a>
             <a class="ul dropdown-item" data-action="rich-text-editor#toggleBulletList" data-rich-text-editor-target="ul">Bulleted list</a>
             <a class="ol dropdown-item" data-action="rich-text-editor#toggleOrderedList" data-rich-text-editor-target="ol">Ordered list</a>
+            <a class="blockquote dropdown-item" data-action="rich-text-editor#toggleBlockquote" data-rich-text-editor-target="blockquote">Quote</a>
           </div>
         </div>
       </div>
