--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -1,5 +1,11 @@
 $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
 
+.tippy-box .dropdown-item {
+  &.is-active {
+    background-color: $white-ter;
+  }
+}
+
 .rich-editor-content {
   p {
     min-height: 1.5rem;
@@ -37,6 +43,13 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
     background-color: $grey-lightest;
     border-left: 5px solid $grey-lighter;
     padding: 1.25em 1.5em;
+  }
+
+  .mention {
+    border: 1px solid #000;
+    border-radius: 0.4rem;
+    padding: 0.1rem 0.3rem;
+    box-decoration-break: clone;
   }
 
   blockquote:not(:last-child),
@@ -80,6 +93,17 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
   text-align: center;
   border-radius: 0.25rem;
 
+  .toolbar-icon {
+    .svg-inline {
+      width: 0.75em;
+      height: 0.75em;
+
+      path {
+        fill: $grey-light;
+      }
+    }
+  }
+
   .dropdown-menu {
     min-width: unset;
   }
@@ -88,15 +112,6 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
     a {
       width: auto;
       border-radius: 0.25rem 0 0 0.25rem;
-    }
-
-    .svg-inline {
-      width: 0.75em;
-      height: 0.75em;
-
-      path {
-        fill: $grey-light;
-      }
     }
   }
 
@@ -113,7 +128,7 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
     color: $black-ter;
     background-color: white;
     border-right: 1px solid $grey-lightest;
-    padding: 0.25rem;
+    padding: 0.25rem 0.5rem;
     width: 2rem;
 
     &.dropdown-item {
@@ -149,6 +164,10 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
 
     &.underline {
       text-decoration: underline;
+    }
+
+    &.link {
+      width: unset;
     }
   }
 }
