--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -45,11 +45,13 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
     padding: 1.25em 1.5em;
   }
 
-  .mention {
-    border: 1px solid #000;
+  .suggestion {
+    color: $info;
+    border: 1px solid darken($info, 10%);
     border-radius: 0.4rem;
     padding: 0.1rem 0.3rem;
     box-decoration-break: clone;
+    cursor: pointer;
   }
 
   blockquote:not(:last-child),
@@ -87,16 +89,19 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
   }
 }
 
+$menu-border-radius: 0.25rem;
+$menu-icon-size: 0.75em;
+
 .rich-text-editor-menu {
   display: flex;
   box-shadow: $menu-box-shadow;
   text-align: center;
-  border-radius: 0.25rem;
+  border-radius: $menu-border-radius;
 
   .toolbar-icon {
     .svg-inline {
-      width: 0.75em;
-      height: 0.75em;
+      width: $menu-icon-size;
+      height: $menu-icon-size;
 
       path {
         fill: $grey-light;
@@ -111,16 +116,16 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
   .dropdown-trigger {
     a {
       width: auto;
-      border-radius: 0.25rem 0 0 0.25rem;
+      border-radius: $menu-border-radius 0 0 $menu-border-radius;
     }
   }
 
   > :first-child {
-    border-radius: 0.25rem 0 0 0.25rem;
+    border-radius: $menu-border-radius 0 0 $menu-border-radius;
   }
 
   > :last-child {
-    border-radius: 0 0.25rem 0.25rem 0;
+    border-radius: 0 $menu-border-radius $menu-border-radius 0;
   }
 
   a {
