--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -179,5 +179,17 @@ $menu-icon-size: 0.75em;
   .link-panel {
     width: 18rem;
     padding: 0.5rem;
+
+    .input {
+      display: inline-block;
+      text-align: left;
+    }
+
+    [contenteditable='true']:empty:before {
+      color: $grey-light;
+      content: attr(placeholder);
+      pointer-events: none;
+      display: block; /* For Firefox */
+    }
   }
 }
