Custom UI for adding a link  (#5)
* Start with link panel

* Custom UI for link selection

* Close other panels when opening a new one

* Update frontend helpers

Co-authored-by: Federico Gonzalez <fedegl@hey.com>

--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -175,4 +175,21 @@ $menu-icon-size: 0.75em;
       width: unset;
     }
   }
+
+  .link-panel {
+    width: 18rem;
+    padding: 0.5rem;
+
+    .input {
+      display: inline-block;
+      text-align: left;
+    }
+
+    [contenteditable='true']:empty:before {
+      color: $grey-light;
+      content: attr(placeholder);
+      pointer-events: none;
+      display: block; /* For Firefox */
+    }
+  }
 }
