--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -11,16 +11,22 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
     min-height: 1.5rem;
   }
 
-  h1 {
-    font-size: $size-3;
+  h1,
+  h2,
+  h3 {
+    font-weight: bold;
   }
 
-  h2 {
+  h1 {
     font-size: $size-4;
   }
 
-  h3 {
+  h2 {
     font-size: $size-5;
+  }
+
+  h3 {
+    font-size: $size-6;
   }
 
   ul {
