Use Bali::Dropdown component

--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -186,7 +186,7 @@ $menu-icon-size: 0.75em;
 
   .link-panel {
     width: 18rem;
-    padding: 0.5rem;
+    padding: 0 0.5rem;
     text-align: left;
     font-size: $size-7;
 
