--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -48,7 +48,7 @@
 
 @import 'sass/components/breadcrumb';
 // @import 'sass/components/card';
-@import 'sass/components/dropdown';
+// @import 'sass/components/dropdown';
 @import 'sass/components/level';
 // @import 'sass/components/media';
 // @import 'sass/components/menu';
@@ -92,3 +92,4 @@
 
 // Bali Styles
 @import 'bali/tabs/index';
+@import 'bali/dropdown/index';
